2005-09-01  Sven Panne  <sven.panne@aedion.de>

	* doc/alut.html, include/AL/alut.h, src/alutError.c,
	src/alutInit.c, src/alutLoader.c, src/alutVersion.c,
	src/alutWaveform.c: Moved internal function prototypes out of the
	public header. Fixed function prototypes, i.e. foo() (C++)
	vs. foo(void) (C).

	* src/alutError.h, src/alutInit.h: Added.

	* .indent.pro, src/alutInit.c, src/alutLoader.c,
	src/alutWaveform.c, test_suite/test_errorstuff.c,
	test_suite/test_fileloader.c, test_suite/test_memoryloader.c,
	test_suite/test_retrostuff.c, test_suite/test_version.c,
	test_suite/test_waveforms.c: Don't use TABs.

	* test_suite/test_fileloader.c, test_suite/test_memoryloader.c,
	test_suite/test_retrostuff.c, test_suite/test_version.c,
	test_suite/test_waveforms.c: Hopefully make the examples compile
	on WinDoze. Play sounds only a finite number of times, which is
	better for automating things.

	* src/alutError.c, src/alutInit.c, src/alutLoader.c,
	src/alutVersion.c, src/alutWaveform.c,
	test_suite/test_errorstuff.c, test_suite/test_fileloader.c,
	test_suite/test_memoryloader.c, test_suite/test_retrostuff.c,
	test_suite/test_version.c, test_suite/test_waveforms.c:
	Reformatted conforming to GNU standards. Please keep it that
	way...

	* Makefile.am: Added a target "permissions" to fix the broken
	permissions after a checkout. Added a target "indent" to
	automagically indent all C sources and headers according to GNU
	standards.

	* .indent.pro: Added.

	* doc/alut.html, include/AL/alut.h, src/alutError.c,
	src/alutInit.c, src/alutLoader.c, test_suite/test_memoryloader.c,
	test_suite/test_retrostuff.c: A bunch of API cleanups:

	Changed the first parameter of alutInit and alutInitWithoutContext
	to int*, not ALint*. argc is an int, after all.

	Changed return type of alutGetError to ALenum, this is more
	consistent with alGetError.

	Changed the argument of alutGetErrorString to ALenum for the same
	reason.

	Changed the first parameter of alutLoadMemoryFromFileImage and